# yt-summary

./: .gitignore  README.md  docker-compose.yml
gateway/: Dockerfile  config.py  main.py  pyproject.toml
gateway/tests/: conftest.py
libs/db/: pyproject.toml
libs/db/src/db/: __init__.py  config.py  models.py  session.py
summarizer/: Dockerfile  ai.py  config.py  main.py  pyproject.toml
transcriber/: Dockerfile  config.py  download.py  main.py  pyproject.toml  transcribe.py
