[project]
name = "summarizer"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aio-pika>=9.5.8",
    "db",
    "ollama>=0.6.1",
    "pydantic-settings>=2.12.0",
]

[tool.uv.sources]
db = { path = "../libs/db", editable = true }
